--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+server.error.whitelabel.enabled=false
